@@ -37,6 +37,13 @@
 #include "ns3/packet-socket-server.h"
 #include "ns3/packet-socket-client.h"
 #include "ns3/packet-socket-helper.h"
+#include "ns3/spectrum-wifi-helper.h"
+#include "ns3/spectrum-value.h"
+#include "ns3/multi-model-spectrum-channel.h"
+#include "ns3/wifi-spectrum-signal-parameters.h"
+#include "ns3/wifi-phy-tag.h"
+#include <tuple>
+#include <vector>
 
 using namespace ns3;
 
@@ -1154,6 +1161,187 @@ Bug2222TestCase::DoRun (void)
   NS_TEST_ASSERT_MSG_EQ (m_countInternalCollisions, 1, "unexpected number of internal collisions!");
 }
 
+//-----------------------------------------------------------------------------
+/**
+ * Make sure that the correct channel width and center frequency have been set
+ * for OFDM basic rate transmissions and BSS channel widths larger than 20 MHz.
+ *
+ * The scenario considers a UDP transmission between a 40 MHz 802.11ac station and a
+ * 40 MHz 802.11ac access point. All transmission parameters are checked so as
+ * to ensure that only 2 {starting frequency, channelWidth, Number of subbands
+ * in SpectrumModel, modulation type} tuples are used.
+ *
+ * See \bugid{2483}
+ */
+
+class Bug2483TestCase : public TestCase
+{
+public:
+  Bug2483TestCase ();
+  virtual ~Bug2483TestCase ();
+  virtual void DoRun (void);
+
+private:
+  /**
+   * A tuple of {starting frequency, channelWidth, Number of subbands in SpectrumModel, modulation type}
+   */
+  typedef std::tuple<double, uint8_t, uint32_t, WifiModulationClass> FreqWidthSubbandModulationTuple;
+  std::vector<FreqWidthSubbandModulationTuple> m_distinctTuples; ///< vector of distinct {starting frequency, channelWidth, Number of subbands in SpectrumModel, modulation type} tuples
+
+  /**
+   * Stores the distinct {starting frequency, channelWidth, Number of subbands in SpectrumModel, modulation type} tuples
+   * that have been used during the testcase run.
+   * \param txParams spectrum signal parameters set by transmitter
+   */
+  void StoreDistinctTuple (std::string context, Ptr<SpectrumSignalParameters> txParams);
+  /**
+   * Triggers the arrival of a burst of 1000 Byte-long packets in the source device
+   * \param numPackets number of packets in burst (maximum: 255)
+   * \param sourceDevice pointer to the source NetDevice
+   * \param destination address of the destination device
+   */
+  void SendPacketBurst (uint8_t numPackets, Ptr<NetDevice> sourceDevice, Address& destination) const;
+};
+
+Bug2483TestCase::Bug2483TestCase ()
+  : TestCase ("Test case for Bug 2483")
+{
+}
+
+Bug2483TestCase::~Bug2483TestCase ()
+{
+}
+
+void
+Bug2483TestCase::StoreDistinctTuple (std::string context,  Ptr<SpectrumSignalParameters> txParams)
+{
+  // Extract starting frequency and number of subbands
+  Ptr<const SpectrumModel> c = txParams->psd->GetSpectrumModel ();
+  uint32_t numBands = c->GetNumBands ();
+  double startingFreq = c->Begin ()->fl;
+
+  // Get channel bandwidth and modulation class
+  Ptr<const WifiSpectrumSignalParameters> wifiTxParams = DynamicCast<WifiSpectrumSignalParameters> (txParams);
+  Ptr<Packet> packet = wifiTxParams->packet->Copy ();
+  WifiPhyTag tag;
+  if (!packet->RemovePacketTag (tag))
+    {
+      NS_FATAL_ERROR ("Received Wi-Fi Signal with no WifiPhyTag");
+      return;
+    }
+  WifiTxVector txVector = tag.GetWifiTxVector ();
+  uint8_t channelWidth = txVector.GetChannelWidth ();
+  WifiModulationClass modulationClass = txVector.GetMode ().GetModulationClass ();
+
+  // Build a tuple and check if seen before (if so store it)
+  FreqWidthSubbandModulationTuple tupleForCurrentTx = std::make_tuple (startingFreq, channelWidth,
+                                                                       numBands, modulationClass);
+  bool found = false;
+  for (std::vector<FreqWidthSubbandModulationTuple>::const_iterator it = m_distinctTuples.begin (); it != m_distinctTuples.end (); it++)
+    {
+      if (*it == tupleForCurrentTx)
+        {
+          found = true;
+        }
+    }
+  if (!found)
+    {
+      m_distinctTuples.push_back (tupleForCurrentTx);
+    }
+}
+
+void
+Bug2483TestCase::SendPacketBurst (uint8_t numPackets, Ptr<NetDevice> sourceDevice,
+                                  Address& destination) const
+{
+  for (uint8_t i = 0; i < numPackets; i++)
+    {
+      Ptr<Packet> pkt = Create<Packet> (1000);  // 1000 dummy bytes of data
+      sourceDevice->Send (pkt, destination, 0);
+    }
+}
+
+void
+Bug2483TestCase::DoRun (void)
+{
+  Config::SetDefault ("ns3::WifiRemoteStationManager::RtsCtsThreshold", StringValue ("500")); // so as to force RTS/CTS for data frames
+  Config::SetDefault ("ns3::WifiPhy::CcaMode1Threshold", DoubleValue (-62.0));
+
+  uint8_t channelWidth = 40; // at least 40 MHz expected here
+
+  NodeContainer wifiStaNode;
+  wifiStaNode.Create (1);
+
+  NodeContainer wifiApNode;
+  wifiApNode.Create (1);
+
+  SpectrumWifiPhyHelper spectrumPhy = SpectrumWifiPhyHelper::Default ();
+  Ptr<MultiModelSpectrumChannel> spectrumChannel = CreateObject<MultiModelSpectrumChannel> ();
+  Ptr<FriisPropagationLossModel> lossModel = CreateObject<FriisPropagationLossModel> ();
+  lossModel->SetFrequency (5.180e9);
+  spectrumChannel->AddPropagationLossModel (lossModel);
+
+  Ptr<ConstantSpeedPropagationDelayModel> delayModel
+  = CreateObject<ConstantSpeedPropagationDelayModel> ();
+  spectrumChannel->SetPropagationDelayModel (delayModel);
+
+  spectrumPhy.SetChannel (spectrumChannel);
+  spectrumPhy.SetErrorRateModel ("ns3::NistErrorRateModel");
+  spectrumPhy.Set ("Frequency", UintegerValue (5180));
+  spectrumPhy.Set ("ChannelWidth", UintegerValue (channelWidth));
+  spectrumPhy.Set ("TxPowerStart", DoubleValue (10));
+  spectrumPhy.Set ("TxPowerEnd", DoubleValue (10));
+
+  WifiHelper wifi;
+  wifi.SetStandard (WIFI_PHY_STANDARD_80211ac);
+  wifi.SetRemoteStationManager ("ns3::ConstantRateWifiManager",
+                                "DataMode", StringValue ("VhtMcs8"),
+                                "ControlMode", StringValue ("VhtMcs8"));
+
+  WifiMacHelper mac;
+  mac.SetType ("ns3::StaWifiMac");
+  NetDeviceContainer staDevice;
+  staDevice = wifi.Install (spectrumPhy, mac, wifiStaNode);
+
+  mac.SetType ("ns3::ApWifiMac");
+  NetDeviceContainer apDevice;
+  apDevice = wifi.Install (spectrumPhy, mac, wifiApNode);
+
+  MobilityHelper mobility;
+  Ptr<ListPositionAllocator> positionAlloc = CreateObject<ListPositionAllocator> ();
+  positionAlloc->Add (Vector (0.0, 0.0, 0.0));
+  positionAlloc->Add (Vector (1.0, 0.0, 0.0)); // put close enough in order to use MCS
+  mobility.SetPositionAllocator (positionAlloc);
+
+  mobility.SetMobilityModel ("ns3::ConstantPositionMobilityModel");
+  mobility.Install (wifiApNode);
+  mobility.Install (wifiStaNode);
+
+  // Send two 5 packet-bursts
+  Simulator::Schedule (Seconds (0.5), &Bug2483TestCase::SendPacketBurst, this, 5, apDevice.Get (0), staDevice.Get (0)->GetAddress ());
+  Simulator::Schedule (Seconds (0.6), &Bug2483TestCase::SendPacketBurst, this, 5, apDevice.Get (0), staDevice.Get (0)->GetAddress ());
+
+  Config::Connect ("/ChannelList/*/$ns3::MultiModelSpectrumChannel/TxSigParams", MakeCallback (&Bug2483TestCase::StoreDistinctTuple, this));
+
+  Simulator::Stop (Seconds (0.8));
+  Simulator::Run ();
+
+  Simulator::Destroy ();
+
+  // {starting frequency, channelWidth, Number of subbands in SpectrumModel, modulation type} tuples
+  uint8_t numberTuples = m_distinctTuples.size ();
+  NS_TEST_ASSERT_MSG_EQ (numberTuples, 2, "Only two distinct tuples expected");
+  NS_TEST_ASSERT_MSG_EQ (std::get<0> (m_distinctTuples[0]), std::get<0> (m_distinctTuples[1]), "Both tuples should have same starting frequency");
+  // Note that the first tuple should the one initiated by the beacon, i.e. legacy OFDM (20 MHz)
+  NS_TEST_ASSERT_MSG_EQ (std::get<1> (m_distinctTuples[0]), 20, "First tuple's channel width should be 20 MHz");
+  NS_TEST_ASSERT_MSG_EQ (std::get<2> (m_distinctTuples[0]), 129, "First tuple should have 129 subbands (64+DC, 20MHz+DC, inband and 32*2 out-of-band, 10MHz on each side)");
+  NS_TEST_ASSERT_MSG_EQ (std::get<3> (m_distinctTuples[0]), WifiModulationClass::WIFI_MOD_CLASS_OFDM, "First tuple should be OFDM");
+  // Second tuple
+  NS_TEST_ASSERT_MSG_EQ (std::get<1> (m_distinctTuples[1]), channelWidth, "Second tuple's channel width should be 40 MHz");
+  NS_TEST_ASSERT_MSG_EQ (std::get<2> (m_distinctTuples[1]), 193, "Second tuple should have 193 subbands (128+DC, 40MHz+DC, inband and 32*2 out-of-band, 10MHz on each side)");
+  NS_TEST_ASSERT_MSG_EQ (std::get<3> (m_distinctTuples[1]), WifiModulationClass::WIFI_MOD_CLASS_VHT, "Second tuple should be VHT_OFDM");
+}
+
 /**
  * \ingroup wifi-test
  * \ingroup tests
@@ -1176,6 +1364,7 @@ WifiTestSuite::WifiTestSuite ()
   AddTestCase (new Bug730TestCase, TestCase::QUICK); //Bug 730
   AddTestCase (new SetChannelFrequencyTest, TestCase::QUICK);
   AddTestCase (new Bug2222TestCase, TestCase::QUICK); //Bug 2222
+  AddTestCase (new Bug2483TestCase, TestCase::QUICK); //Bug 2483
 }
 
 static WifiTestSuite g_wifiTestSuite; ///< the test suite
